--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -6,7 +6,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
