--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@yarn-mono/backend",
-  "packageManager": "yarn@3.6.3"
+  "packageManager": "yarn@3.6.3",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
